--- a/templates/index.html
+++ b/templates/index.html
@@ -5,21 +5,74 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Recipe Rating</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/style.css">
+  <title>Deep Dishes</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    ​<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="../static/css/style.css">
+  
 
 </head>
 
 <body>
 
   <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Recipe Rating</h1>
-        <p>Welcome to the recipe rating dashboard</p>
+    <nav class="navbar p-0 mb-1 navbar-expand-md sticky-top navbar-light" role="navigation">  
+      <a class="navbar-brand p-2 mt-0 ml-5 bg-danger text-white" href="index.html"><i class="fas fa-utensils"></i> Deep Dishes</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="collapsingNavbar"> 
+          <ul class="navbar-nav mr-5 ml-auto">
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-project-diagram"></i> Project
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="fruits.html"><i class="fas fa-thermometer-full fa-fw"></i> Fruits</a>
+                      <a class="dropdown-item" href="vegetables.html"><i class="fas fa-tint fa-fw"></i> Vegetables</a>
+                      <a class="dropdown-item" href="condiments.html"><i class="fab fa-cloudversify fa-fw"></i> Condiments</a>
+                      
+                  </div>
+              </li>
+              <li class="nav-item">
+                      <a class="nav-link" href="recipe.html"><i class="fas fa-greater-than-equal fa-fw"></i> Recipe</a>
+              </li>
+              
+          </ul>
       </div>
+    </nav>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../static/images/bean.jpg" class="d-block w-25" alt="Beans">
+        </div>
+        <div class="carousel-item">
+          <img src="../static/images/Buf-Stroganoff.jpg" class="d-block w-25" alt="Buf">
+        </div>
+        <div class="carousel-item">
+          <img src="../static/images/lasagna.jpg" class="d-block w-25" alt="lasagna">
+        </div>
+        <div class="carousel-item">
+          <img src="../static/images/pmdt.jpg" class="d-block w-25" alt="pmdt">
+        </div>
+      </div>
+    </div>
+
+    
+    
+    <div style="margin:3em;">
+      <form class="form-inline" id="topicForm" action="" method="POST">
+        <input type="text" id="inputTopic" name="topic" class="form-control mb-2 mr-sm-2" placeholder="Topic of interest" required autofocus/>
+        <button type="button" id="btnFetch" class="btn btn-danger mb-2">Search</button>
+      </form>
+    </div>
+
     </div>
     <section id="portfolio">
     <div class="row">
@@ -75,13 +128,16 @@
     <button type="button" id="btnAdd" value="Add" onclick="addItem()"></button>
    
   </div>
-  <script src="app.js"></script>
+  <script src="../static/js/app.js"></script>
+  
+  
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  
 
 </body>
 
