--- a/templates/team.html
+++ b/templates/team.html
@@ -50,101 +50,29 @@
       </div>
     </nav>
     <div class="row">
-    
-      <div class="col-md-12 text-center text-white p-5">
-        <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-          <h1>Deep Dishes</h1>
-        </div>
-        <hr>
-        <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="2000">
-    
-          <h2>Welcome in AI recipes project</h2>
-        </div>
-      </div>
-    
-    </div>
+        <div class="col-md-6">
+            <div class="container-profile border p-2 m-5">
+                <img src="../static/images/team/Laurent.jpeg" class="profile float-left p-1" alt="Laurent">
+                <div class="h4 text-white">Laurent Nedelec</div>
+                <i class="fas fa-envelope-square"></i> <a href="mailto: nedeleclaurent@gmail.com" title="nedeleclaurent@gmail.com">Send Email</a>
+                
+            </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../static/images/bean.jpg" class="d-block w-25" alt="Beans">
         </div>
-        <div class="carousel-item">
-          <img src="../static/images/Buf-Stroganoff.jpg" class="d-block w-25" alt="Buf">
-        </div>
-        <div class="carousel-item">
-          <img src="../static/images/lasagna.jpg" class="d-block w-25" alt="lasagna">
-        </div>
-        <div class="carousel-item">
-          <img src="../static/images/pmdt.jpg" class="d-block w-25" alt="pmdt">
-        </div>
-      </div>
-    </div>
+        <div class="col-md-6">
 
+        </div>
     
-    
-    <div style="margin:3em;">
-      <form class="form-inline" id="topicForm" action="" method="POST">
-        <input type="text" id="inputTopic" name="topic" class="form-control mb-2 mr-sm-2" placeholder="Topic of interest" required autofocus/>
-        <button type="button" id="btnFetch" class="btn btn-danger mb-2">Search</button>
-      </form>
-    </div>
-
-    </div>
-    <section id="portfolio">
-    <div class="row">
-      <div class="col-lg-4 col-sm-6" data-aos="flip-left">
-        <a class="portfolio-box" href="fruits.html">
-          <img class="img-fluid" src="../static/images/fruits.jpg" alt="">
-          <div class="portfolio-box-caption">
-            <div class="project-category text-dark-50">
-              Category
-            </div>
-            <div class="project-name">
-              fruits
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-          <img class="img-fluid" src="../static/images/vegetables.jpg" alt="">
-          <div class="portfolio-box-caption">
-            <div class="project-category text-dark-50">
-              Category
-            </div>
-            <div class="project-name">
-              Vegetables
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-          <img class="img-fluid" src="../static/images/condiments.jpg" alt="">
-          <div class="portfolio-box-caption">
-            <div class="project-category text-dark-50">
-              Category
-            </div>
-            <div class="project-name">
-              condiments
-            </div>
-          </div>
-        </a>
-      </div>
     </div>
     <div class="row">
-      <div class="col-md-4 p-0">
-      </div>
-      <div class="col-md-4 p-0">
-      </div>
-      <div class="col-md-4 p-0">
-      </div>
-    </div>
+        <div class="col-md-6">
 
-    <button type="button" id="btnAdd" value="Add" onclick="addItem()"></button>
-   
-  </div>
+        </div>
+        <div class="col-md-6">
+
+        </div>
+    
+    </div>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
