--- a/templates/index.html
+++ b/templates/index.html
@@ -6,62 +6,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Deep Dishes</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    ​<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    
-    <link rel="stylesheet" href="../static/css/style.css">
-  
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  ​
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="../static/css/style.css">
+
 
 </head>
 
 <body>
 
   <div class="container">
-    <nav class="navbar p-0 mb-1 navbar-expand-md sticky-top navbar-light" role="navigation">  
-      <a class="navbar-brand pl-3 pr-3 mt-0 ml-5 bg-warning text-dark" href="index.html"><i class="fas fa-utensils"></i> Deep Dishes</a>
+    <nav class="navbar p-0 mb-1 navbar-expand-md sticky-top navbar-light" role="navigation">
+      <a class="navbar-brand pl-3 pr-3 mt-0 ml-5 bg-warning text-dark" href="index.html"><i class="fas fa-utensils"></i>
+        Deep Dishes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-          <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-collapse collapse" id="collapsingNavbar"> 
-          <ul class="navbar-nav mr-5 ml-auto">
-              <li class="nav-item dropdown">
-                  <a class="nav-link text-warning dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="fas fa-project-diagram"></i> Project
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="fruits.html"><i class="fas fa-thermometer-full fa-fw"></i> Fruits</a>
-                      <a class="dropdown-item" href="vegetables.html"><i class="fas fa-tint fa-fw"></i> Vegetables</a>
-                      <a class="dropdown-item" href="condiments.html"><i class="fab fa-cloudversify fa-fw"></i> Condiments</a>
-                      
-                  </div>
-              </li>
-              <li class="nav-item">
-                      <a class="nav-link text-warning" href="recipe.html"><i class="fas fa-greater-than-equal fa-fw"></i> Recipe</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-warning" href="team.html"><i class="fas fa-user-friends"></i> Our Team</a>
-              </li>
-              
-          </ul>
+      <div class="navbar-collapse collapse" id="collapsingNavbar">
+        <ul class="navbar-nav mr-5 ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link text-warning dropdown-toggle" href="#" id="navbarDropdown" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-project-diagram"></i> Project
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="fruits.html"><i class="fas fa-thermometer-full fa-fw"></i> Fruits</a>
+              <a class="dropdown-item" href="vegetables.html"><i class="fas fa-tint fa-fw"></i> Vegetables</a>
+              <a class="dropdown-item" href="condiments.html"><i class="fab fa-cloudversify fa-fw"></i> Condiments</a>
+
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-warning" href="recipe.html"><i class="fas fa-greater-than-equal fa-fw"></i>
+              Recipe</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-warning" href="team.html"><i class="fas fa-user-friends"></i> Our Team</a>
+          </li>
+
+        </ul>
       </div>
     </nav>
     <div class="row">
-    
+
       <div class="col-md-12 text-center text-white p-5">
         <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
           <h1>Deep Dishes</h1>
         </div>
         <hr>
         <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="2000">
-    
+
           <h2>Welcome in AI recipes project</h2>
         </div>
       </div>
-    
+
     </div>
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -81,84 +93,120 @@
       </div>
     </div>
 
-    
-    
+
+
     <div style="margin:3em;">
       <form class="form-inline" id="topicForm" action="" method="POST">
-        <input type="text" id="inputTopic" name="topic" class="form-control mb-2 mr-sm-2" placeholder="Topic of interest" required autofocus/>
+        <input type="text" id="inputTopic" name="topic" class="form-control mb-2 mr-sm-2"
+          placeholder="Topic of interest" required autofocus />
         <button type="button" id="btnFetch" class="btn btn-danger mb-2">Search</button>
       </form>
     </div>
 
-    </div>
-    <section id="portfolio">
-    <div class="row">
-      <div class="col-lg-4 col-sm-6" data-aos="flip-left">
-        <a class="portfolio-box" href="fruits.html">
-          <img class="img-fluid" src="../static/images/fruits.jpg" alt="">
-          <div class="portfolio-box-caption">
-            <div class="project-category text-dark-50">
-              Category
-            </div>
-            <div class="project-name">
-              fruits
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-          <img class="img-fluid" src="../static/images/vegetables.jpg" alt="">
-          <div class="portfolio-box-caption">
-            <div class="project-category text-dark-50">
-              Category
-            </div>
-            <div class="project-name">
-              Vegetables
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-lg-4 col-sm-6">
-        <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-          <img class="img-fluid" src="../static/images/condiments.jpg" alt="">
-          <div class="portfolio-box-caption">
-            <div class="project-category text-dark-50">
-              Category
-            </div>
-            <div class="project-name">
-              condiments
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 p-0">
-      </div>
-      <div class="col-md-4 p-0">
-      </div>
-      <div class="col-md-4 p-0">
-      </div>
-    </div>
+  </div>
 
-    <button type="button" id="btnAdd" value="Add" onclick="addItem()"></button>
-   
+  <div class="row">
+    <div class="col-lg-4 col-sm-6" data-aos="flip-left">
+      <a class="portfolio-box" href="fruits.html">
+        <img class="img-fluid" src="../static/images/recipes_selected/chicken_curry.jpg" alt="">
+        <div class="portfolio-box-caption">
+          <div class="project-category text-dark-50">
+            Sammy
+          </div>
+          <div class="project-name">
+            Chicken Curry
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-lg-4 col-sm-6">
+      <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+        <img class="img-fluid" src="../static/images/recipes_selected/spanish_rice.jpg" alt="">
+        <div class="portfolio-box-caption">
+          <div class="project-category text-dark-50">
+            David
+          </div>
+          <div class="project-name">
+            Spanish Rice Pilaf
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-lg-4 col-sm-6">
+      <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+        <img class="img-fluid" src="../static/images/recipes_selected/muffins.jpeg" alt="">
+        <div class="portfolio-box-caption">
+          <div class="project-category text-dark-50">
+            Laurent
+          </div>
+          <div class="project-name">
+            Banana Ginger Muffin
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="row">
+
+    <div class="col-lg-8">
+
+      <div class="popup" onclick="myFunction()">Click me!
+        <span class="popuptext" id="myPopup">Popup text...</span>
+      </div>
+
+    </div>
+    <div class="col-lg-4 ">
+      <div class="box bg-white p-0 pb-2">
+        <div class="h4 mb-2 text-white bg-warning p-2 text-center">Our Selections</div>
+
+        <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+          <img class="float-left img-fluid" src="../static/images/recipes_selected/chicken_curry.jpg" width=45%
+            alt="Chicken Curry">
+          <div class="portfolio-box-caption">
+            <div class="project-category text-dark-50">
+              Laurent
+            </div>
+            <div class="project-name">
+              Chicken Curry
+            </div>
+          </div>
+        </a>
+        <a href="index.html" title="Ouverture d'une nouvelle fenêtre popup"
+ onclick="window.open(this.href,'nom_Popup','​height=400 , width=400 ,location=no ,resizable=yes ,scrollbars=yes');return false;">+</a></div>
+        <a href="spanish_rice.html" title="Ouverture d'une nouvelle fenêtre popup"
+        onclick="window.open(this.href,'nom_Popup','​height=400 , width=400 ,location=no ,resizable=yes ,scrollbars=yes');return false;">
+          <img class="img-fluid" src="../static/images/recipes_selected/spanish_rice.jpg" width=45% alt="Cloud Map">
+        </a>
+        <a href="#.html">
+          <img class="float-left img-fluid target" src="../static/images/recipes_selected/muffins.jpeg" width=45%
+            alt="Humidity Map">
+        </a>
+        <a href="#.html">
+          <img class="img-fluid" src="../static/images/recipes_selected/spanish_rice.jpg" width=45% alt="Wind Map">
+        </a>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+
+  <button type="button" id="btnAdd" value="Add" onclick="addItem()"></button>
+
   </div>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
   </script>
   <script src="../static/js/app.js"></script>
-  
-  
+
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  
+
 
 </body>
 
