--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,7 +86,7 @@ h1 {
 
 .profile {
     border-radius: 45%;
-    width: 15%;
+    width: 25%;
 }
 
 .border {
@@ -96,6 +96,72 @@ h1 {
     color: white;
 }
 
-a[href^="mailto"] { color: yellow; }
+/*a[href^="mailto"] { color: white; }*/
 
-a[href^="mailto"]:hover:after { content: " > " attr(title); }
+/*a[href^="mailto"]:hover:after { content: " > " attr(title); }*/
+
+.logo {
+    color: white;
+}
+
+.logo:hover {
+    color:blue;
+}
+
+
+.list-inline-item {
+    padding: 4px;
+}
+
+/* Popup container */
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  /* The actual popup (appears on top) */
+  .popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+  }
+  
+  /* Popup arrow */
+  .popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  /* Toggle this class when clicking on the popup container (hide and show the popup) */
+  .popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s
+  }
+  
+  /* Add animation (fade in the popup) */
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
