--- a/templates/team.html
+++ b/templates/team.html
@@ -52,27 +52,112 @@
     <div class="row">
         <div class="col-md-6">
             <div class="container-profile border p-2 m-5">
-                <img src="../static/images/team/Laurent.jpeg" class="profile float-left p-1" alt="Laurent">
-                <div class="h4 text-white">Laurent Nedelec</div>
-                <i class="fas fa-envelope-square"></i> <a href="mailto: nedeleclaurent@gmail.com" title="nedeleclaurent@gmail.com">Send Email</a>
-                
+                <img src="../static/images/team/Laurent.jpeg" class="profile float-left m-2" alt="Laurent">
+                <div class="h4 text-white text-center">Laurent Nedelec</div>
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="mailto: nedeleclaurent@gmail.com" title="nedeleclaurent@gmail.com">
+                            <i class="h1 fas fa-envelope-square logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/laurent-nedelec" target="_blank">
+                            <i class="h1 fab fa-linkedin logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/Lorsmo" target="_blank">
+                            <i class="h1 fab fa-github logo"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
-
+    
         </div>
         <div class="col-md-6">
-
+            <div class="container-profile border p-2 m-5">
+                <img src="../static/images/team/Daniel.jpeg" class="profile float-left m-2" alt="Daniel">
+                <div class="h4 text-white text-center">Daniel Hesse</div>
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="mailto: dan.hesse@hotmail.com" title="dan.hesse@outlook.com">
+                            <i class="h1 fas fa-envelope-square logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/dhesse84/" target="_blank">
+                            <i class="h1 fab fa-linkedin logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/dhesse84" target="_blank">
+                            <i class="h1 fab fa-github logo"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+    
         </div>
     
     </div>
     <div class="row">
         <div class="col-md-6">
+            <div class="container-profile border p-2 m-5">
+                <img src="../static/images/team/Sammy.jpeg" class="profile float-left m-2" alt="Sammy">
+                <div class="h4 text-white text-center">Sammi (Peiyun) Huang</div>
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="mailto: peiyun_hng@yahoo.com" title="peiyun_hng@yahoo.com">
+                            <i class="h1 fas fa-envelope-square logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/sammi-huang-3b179295/" target="_blank">
+                            <i class="h1 fab fa-linkedin logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/peiyunhuang" target="_blank">
+                            <i class="h1 fab fa-github logo"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
         </div>
         <div class="col-md-6">
+            <div class="container-profile border p-2 m-5">
+                <img src="../static/images/team/David.jpeg" class="profile float-left m-2" alt="David">
+                <div class="h4 text-white text-center">David Kaatmann</div>
+                <ul class="list-inline text-center">
+                    <li class="list-inline-item">
+                        <a href="mailto: david.kaatmann@gmail.com" title="david.kaatmann@gmail.com">
+                            <i class="h1 fas fa-envelope-square logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/david-kaatmann-865a38189/" target="_blank">
+                            <i class="h1 fab fa-linkedin logo"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/setsumei1974" target="_blank">
+                            <i class="h1 fab fa-github logo"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
         </div>
     
     </div>
+
+    <!-- begin wwww.htmlcommentbox.com -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24drd6DIjEt2A2.s4PFD.rm."+"&opts=16862&num=10&ts=1578441433498");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end www.htmlcommentbox.com -->
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
