--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
@@ -24,7 +24,16 @@
 
   <link rel="stylesheet" href="../static/css/style.css">
 
+    <!-- Inset scroll box made with CSS file -->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
+    <!-- jQuery UI stylesheet -->
+    <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.12.1/themes/blitzer/jquery-ui.css">
+    <!--<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">-->
+
+    <!-- jQuery UI -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -76,7 +85,7 @@
 
     </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../static/images/bean.jpg" class="d-block w-25" alt="Beans">
@@ -91,21 +100,118 @@
           <img src="../static/images/pmdt.jpg" class="d-block w-25" alt="pmdt">
         </div>
       </div>
-    </div>
+    </div> -->
+
+
+    <div class="col-md-12">
+      <div id="tabs">
+          <ul>
+            <li><a href="#tabs-1" onclick="plistsetup()">Tab1</a></li>
+            <li><a href="#tabs-2">Tab2</a></li>
+            <li><a href="#tabs-3">View Recipes</a></li>
+          </ul> 
+        <div id="tabs-1">
+          <div class="card" style="width: 35rem;">
+              <div class="card-body">
+                  <p class="card-text">Select a President's name to generate a Word Cloud from their collection of speeches.</p>
+              </div>
+          </div>
+      <row class="row">
+          <div class="col-sm-12 col-lg-3">
+              <aside class="filters">
+                  <div class="panel panel-default">
+                      <div class="panel-heading">President Lookup</div>
+                      <div class="panel-body">
+                          <form>
+                              <div class="form-group">
+                                      <h5>Select President:</h5>
+                                      <select id="sel_div" onchange="cloudsearch(this.value)"></select>
+                              </div>
+                          </form>
+                      </div>
+                  </div>
+              </aside>
+          </div>
+          <div class="col-sm-12 col-lg-9">
+              <div id="cloud"></div>
+          </div>
+      </row>
+      </div>
+     
+      
+
+
+      <div id="tabs-2">
+              <div class="card" style="width: 35rem;">
+                  <div class="card-body">
+                      <p class="card-text">Enter a specific word to see how frequently each President used that word in their speeches.</p>
+                  </div>
+              </div>
+        <row class="row">
+          <div class="col-sm-12 col-lg-3">
+              <aside class="filters">
+                  <div class="panel panel-default">
+                      <div class="panel-heading">Word Lookup</div>
+                      <div class="panel-body">
+                          <form>
+                              <div class="form-group">
+                                  <input class="form-control" id="word-search1" type="text" placeholder="Enter a word">
+                              </div>
+                              <button id="filter-btn" type="button" class="btn btn-default" onclick="barsearch()">Search</button>
+                          </form>
+                      </div>
+                  </div>
+              </aside>
+          </div>
+          <div class="col-sm-12 col-lg-9">
+              <div id="bar-chart"></div>
+          </div>
+        </row>
+      </div>
 
 
 
-    <div style="margin:3em;">
-      <form class="form-inline" id="topicForm" action="" method="POST">
-        <input type="text" id="inputTopic" name="topic" class="form-control mb-2 mr-sm-2"
-          placeholder="Topic of interest" required autofocus />
-        <button type="button" id="btnFetch" class="btn btn-danger mb-2">Search</button>
-      </form>
-    </div>
+      <div id="tabs-3">
+        <div class="row">
+          <div class="col-sm-12 col-lg-3">
+            <div class="panel panel-default">
+              <form>
+                  <div style="margin:3em;">
+                    <form>
+                      <div class="form-group">
+                          <input class="form-control" id="word-search2" type="text" placeholder="Enter a word.">
+                      </div>
+                      <button id="filter-btn" type="button" class="btn btn-default" onclick="docsearch()">Search</button>
+                  </form>
+
+                                
+                    <!-- <div class="form-group">
+                      <input class="form-control" id="word-search2" type="text" placeholder="Enter a word.">
+                    </div>
+
+                    <button id="filter-btn" type="button" class="btn btn-default" onclick="docsearch()">Search</button> -->
+              </div>
+            </div>
+          </div>
+          <div class="docsList" style="height: 500px; overflow: auto;">
+            <div id="table-area" class="table-content-class">
+                    <table id="myTable" class="table table-striped center gfh" style="background-color: #9999FF !important;">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Description</th>
+                                    <th>Ingredients</th>
+                                    <th>Steps</th>
+                                </tr>
+                            </thead>
+                            <tbody class="gfg"></tbody>
+                    </table>
+                </div>
+            </div>
 
   </div>
 
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-lg-4 col-sm-6" data-aos="flip-left">
       <a class="portfolio-box" href="fruits.html">
         <img class="img-fluid" src="../static/images/recipes_selected/chicken_curry.jpg" alt="">
@@ -146,19 +252,17 @@
       </a>
     </div>
   </div>
-  <div class="row">
+  <div class="row"> -->
 
-    <div class="col-lg-8">
-
+    <!-- <div class="col-lg-8">
       <div class="popup" onclick="myFunction()">Click me!
         <span class="popuptext" id="myPopup">Popup text...</span>
       </div>
-
     </div>
+
     <div class="col-lg-4 ">
       <div class="box bg-white p-0 pb-2">
         <div class="h4 mb-2 text-white bg-warning p-2 text-center">Our Selections</div>
-
         <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
           <img class="float-left img-fluid" src="../static/images/recipes_selected/chicken_curry.jpg" width=45%
             alt="Chicken Curry">
@@ -185,7 +289,9 @@
           <img class="img-fluid" src="../static/images/recipes_selected/spanish_rice.jpg" width=45% alt="Wind Map">
         </a>
       </div>
-    </div>
+    </div> -->
+
+
   </div>
   </div>
   </div>
@@ -200,12 +306,15 @@
   <script src="../static/js/app.js"></script>
 
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+   -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 
 </body>
