--- a/templates/index.html
+++ b/templates/index.html
@@ -12,20 +12,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+ 
 
   <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- Inset scroll box made with CSS file -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+     <!-- ----  CSS -->
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    <!--<link rel="stylesheet" type="text/css" href="static/css/style.css">-->
 
     <!-- jQuery UI stylesheet -->
     <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/jquery.ui/1.12.1/themes/blitzer/jquery-ui.css">
@@ -40,7 +35,7 @@
 
   <div class="container">
     <nav class="navbar p-0 mb-1 navbar-expand-md sticky-top navbar-light" role="navigation">
-      <a class="navbar-brand pl-3 pr-3 mt-0 ml-5 bg-warning text-dark" href="index.html"><i class="fas fa-utensils"></i>
+      <a class="navbar-brand pl-3 pr-3 mt-0 ml-5 bg-warning text-dark" href="{{ url_for('home') }}"><i class="fas fa-utensils"></i>
         Deep Dishes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -64,7 +59,7 @@
               Recipe</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-warning" href="team.html"><i class="fas fa-user-friends"></i> Our Team</a>
+            <a class="nav-link text-warning" href="{{ url_for('team') }}"><i class="fas fa-user-friends"></i> Our Team</a>
           </li>
 
         </ul>
@@ -155,6 +150,7 @@
                       <div class="panel-body">
                           <form>
                               <div class="form-group">
+                               
                                   <input class="form-control" id="word-search1" type="text" placeholder="Enter a word">
                               </div>
                               <button id="filter-btn" type="button" class="btn btn-default" onclick="barsearch()">Search</button>
@@ -184,7 +180,8 @@
                       <button id="filter-btn" type="button" class="btn btn-default" onclick="docsearch()">Search</button>
                   </form>
 
-                                
+                  <p>Number Recipes:</p>
+                  <p id="number-recipes"></p>              
                     <!-- <div class="form-group">
                       <input class="form-control" id="word-search2" type="text" placeholder="Enter a word.">
                     </div>
@@ -195,7 +192,7 @@
           </div>
           <div class="docsList" style="height: 500px; overflow: auto;">
             <div id="table-area" class="table-content-class">
-                    <table id="myTable" class="table table-striped center gfh" style="background-color: #9999FF !important;">
+                    <table id="myTable" class="table table-striped table-bordered table-sm table-hover center gfh">
                             <thead>
                                 <tr>
                                     <th>Name</th>
@@ -303,7 +300,7 @@
   <script>
     AOS.init();
   </script>
-  <script src="../static/js/app.js"></script>
+  <!--<script src="../static/js/app.js"></script>-->
 
 
   <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -312,6 +309,15 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
    -->
+   <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
